Purchase Code input needs to automatically submit #19
Purchase Code input needs to automatically submit #19

https://github.com/genitrust/dash-wallet/issues/19

--- a/DashWallet/Wallofcoins/StoryBoard/buyDash.storyboard
+++ b/DashWallet/Wallofcoins/StoryBoard/buyDash.storyboard
@@ -997,6 +997,9 @@
                                         <color key="textColor" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="13"/>
                                         <textInputTraits key="textInputTraits"/>
+                                        <connections>
+                                            <outlet property="delegate" destination="7MS-bV-LaT" id="Hxh-s0-e92"/>
+                                        </connections>
                                     </textField>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="1qK-O9-hKx">
                                         <rect key="frame" x="10.5" y="92.5" width="393" height="2"/>
